# LifeQualityVisualizer

./: .gitignore  README.md
MapUI/: index.html  lifeQuality.geojson  main.js  mapConfiguration.html  server.js  style.css
life-quality-visualizer/: data-processing.py  pyproject.toml
life-quality-visualizer/exported-data/: greenAreas.geojson  healthcare.geojson  noise.geojson  publicTransport.geojson  restaurants.geojson  schools.geojson  shops.geojson  sports.geojson
life-quality-visualizer/life_quality_visualizer/: __init__.py  constants.py  data-processing.py  data_processing.py  main.py  point_rasterizer.py  scrap_OSM.py  test.py
life-quality-visualizer/sanitized-data/: lifeQuality.geojson
